# seeker

./: .gitignore  README.md  config.example.yaml  plan.md  pyproject.toml  sermon_template.md
plan/: 00-overview.md  01-phase-audio-ingestion.md  02-phase-gemini-websocket.md  03-phase-semantic-tracking.md  04-phase-propresenter-control.md  05-phase-reliability-orchestration.md
prompts/: v1.0_baseline.txt  v1.1_worship.txt
seeker/: __init__.py  audio_capture.py  cli.py  config.py  daemon.py  file_audio.py  gemini_session.py  manuscript_parser.py  prompt_builder.py  propresenter_client.py
tests/: arrangement_all_my_boast.txt  conftest.py  test_config.py  test_manuscript_parser.py  test_prompt_builder.py  test_propresenter_client.py
