[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seeker"
version = "0.1.0"
description = "Automated sermon slide synchronization using Gemini Multimodal Live API and ProPresenter 7"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "websockets>=13.0",
    "aiohttp>=3.9,<3.11",
    "PyAudio>=0.2.14",
    "pyyaml>=6.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

[project.scripts]
seeker = "seeker.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
